--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <title></title>
   </head>
   <body>
-    <form id="shoutForm">
-      <label for="shout">What to shout??</label>
-      <input id="shout" class="form-control" type="text">
+    <div class="container">
+      <form id="shoutForm">
+        <h1><label for="shout">What to shout??</label></h1>
+        <input id="shout" class="form-control" type="text">
 
-      <button type="submit" class="btn">Shout it!</button>
+        <button type="submit" class="btn">Shout it!</button>
 
-      <div id="shouted">
-        <span class="shout"></span>!!!!111!11!!1@
+        <div id="shouted">
+          <span class="shout"></span>!!!!111!11!!1@
+        </div>
       </div>
     </form>
   </body>
